inertia-core/src/solvers/snapshots/inertia_core__solvers__min_assists_board__test__fortress.snap
---
source: src/solvers/min_assists_board.rs
expression: board
---
[
  004 004 004 004 004 004 004 003 004 004 004 004 004 004 004 004
  004 004 004 004 004 004 004 003 004 004 004 004 004 004 004 004
  004 004 004 004 004 004 004 003 004 004 004 004 004 004 004 004
  004 004 004 004 004 004 004 003 004 004 004 004 004 004 004 004
  004 004 004 004 004 004 004 003 004 004 004 004 004 004 004 004
  004 004 004 004 004 004 004 003 004 004 004 004 004 004 004 004
  004 004 004 004 004 004 004 003 004 004 004 004 004 004 004 004
  004 004 004 004 004 004 004 003 004 004 004 004 004 004 004 004
  004 004 004 004 004 004 004 003 004 004 004 004 004 004 004 004
  004 004 004 004 004 004 004 003 004 004 004 004 004 004 004 004
  004 004 004 004 004 003 003 003 003 003 004 004 004 004 004 004
  004 004 004 004 004 003 003 003 003 003 004 004 004 004 004 004
  004 004 004 004 004 002 002 001 002 002 004 004 004 004 004 004
  004 004 004 004 004 003 002 001 002 003 004 004 004 004 004 004
  004 004 004 004 004 003 001 000 001 003 004 004 004 004 004 004
  004 004 004 004 004 003 002 001 002 003 004 004 004 004 004 004
]
