inertia-core/src/solvers/snapshots/inertia_core__solvers__min_assists_board__test__gauntlet.snap
---
source: src/solvers/min_assists_board.rs
expression: board
---
[
  008 007 007 008 008 008 008 008 008 008 008 008 008 008 008 008
  007 007 007 006 006 007 007 007 007 007 007 007 007 007 007 007
  007 007 007 006 006 007 007 007 007 007 007 007 007 007 007 007
  008 006 006 006 006 005 005 006 006 006 006 006 006 006 006 006
  008 006 006 006 006 005 005 006 006 006 006 006 006 006 006 006
  008 007 007 005 005 005 005 004 004 005 005 005 005 005 005 005
  008 007 007 005 005 005 005 004 004 005 005 005 005 005 005 005
  008 007 007 006 006 004 004 004 004 003 003 004 004 004 004 004
  008 007 007 006 006 004 004 004 004 003 003 004 004 004 004 004
  008 007 007 006 006 005 005 003 003 003 003 002 002 003 003 003
  008 007 007 006 006 005 005 003 003 003 003 002 002 003 003 003
  008 007 007 006 006 005 005 004 004 002 002 002 002 002 001 002
  008 007 007 006 006 005 005 004 004 002 002 002 002 002 001 002
  008 007 007 006 006 005 005 004 004 003 003 002 002 002 001 002
  008 007 007 006 006 005 005 004 004 003 003 001 001 001 000 001
  008 007 007 006 006 005 005 004 004 003 003 002 002 002 001 002
]
