inertia-core/src/solvers/snapshots/inertia_core__solvers__min_assists_board__test__gauntlet_guardrail.snap
---
source: src/solvers/min_assists_board.rs
expression: board
---
[
  008 007 007 008 255 255 255 255 255 255 255 255 255 255 255 255
  007 007 007 006 006 007 255 255 255 255 255 255 255 255 255 255
  007 007 007 006 006 007 255 255 255 255 255 255 255 255 255 255
  008 006 006 006 006 005 005 006 255 255 255 255 255 255 255 255
  255 006 006 006 006 005 005 006 255 255 255 255 255 255 255 255
  255 007 007 005 005 005 005 004 004 005 255 255 255 255 255 255
  255 255 255 005 005 005 005 004 004 005 255 255 255 255 255 255
  255 255 255 006 006 004 004 004 004 003 003 004 255 255 255 255
  255 255 255 255 255 004 004 004 004 003 003 004 255 255 255 255
  255 255 255 255 255 005 005 003 003 003 003 002 002 003 255 255
  255 255 255 255 255 255 255 003 003 003 003 002 002 003 255 255
  255 255 255 255 255 255 255 004 004 002 002 002 002 002 001 002
  255 255 255 255 255 255 255 255 255 002 002 002 002 002 001 002
  255 255 255 255 255 255 255 255 255 003 003 002 002 002 001 002
  255 255 255 255 255 255 255 255 255 255 255 001 001 001 000 001
  255 255 255 255 255 255 255 255 255 255 255 002 002 002 001 002
]
