inertia-core/src/solvers/snapshots/inertia_core__solvers__min_assists_board__test__random_classic_gen_21.snap
---
source: src/solvers/min_assists_board.rs
expression: board
---
[
  001 002 002 002 001 001 002 001 002 002 002 002 002 002 002 002
  001 001 001 001 001 001 001 001 002 002 002 002 002 002 002 002
  002 002 002 002 001 001 002 001 001 002 002 002 002 002 002 002
  002 002 002 002 001 001 002 001 001 002 002 002 002 002 002 002
  002 002 002 002 001 001 002 001 001 002 002 002 002 002 002 002
  002 002 002 002 001 001 002 001 001 002 002 002 002 002 002 002
  002 002 002 002 001 001 001 001 001 001 001 001 002 002 002 002
  001 001 001 000 001 001 001 255 255 002 002 002 002 002 002 002
  001 001 001 000 001 001 001 255 255 002 002 002 002 002 002 002
  002 002 002 000 000 000 002 001 002 002 002 002 002 002 002 002
  002 002 002 002 001 001 001 001 002 002 002 002 002 002 002 002
  002 002 002 002 001 001 001 001 002 002 002 002 002 002 002 002
  002 002 002 002 001 001 001 001 001 001 001 001 001 001 001 001
  002 002 002 002 001 001 001 001 002 001 002 002 002 002 002 002
  002 002 002 002 001 001 001 001 002 001 002 002 002 002 002 002
  002 002 002 002 001 001 001 001 002 001 002 002 002 002 002 002
]
