inertia-core/src/solvers/snapshots/inertia_core__solvers__min_assists_board__test__random_classic_gen_22.snap
---
source: src/solvers/min_assists_board.rs
expression: board
---
[
  001 001 001 001 001 001 001 001 001 001 001 001 001 001 001 001
  001 001 001 001 001 001 001 001 001 001 001 001 001 001 001 001
  001 001 001 001 001 001 001 001 001 001 001 001 001 001 001 001
  001 001 001 001 001 001 001 001 001 001 001 001 001 001 001 001
  001 001 001 001 001 001 001 001 001 001 001 001 001 001 001 001
  001 001 001 001 001 001 001 001 001 001 001 001 000 000 001 001
  001 001 001 001 001 001 001 001 001 001 001 001 001 000 001 001
  001 001 001 001 001 001 001 255 255 001 001 001 001 000 001 001
  001 001 001 001 001 001 001 255 255 001 001 001 001 001 001 001
  001 001 001 001 001 001 001 001 001 001 001 001 001 001 001 001
  001 001 001 001 001 001 001 001 001 001 001 001 001 001 001 001
  001 001 001 001 001 001 001 001 001 001 001 001 001 001 001 001
  001 001 001 001 001 001 001 001 001 001 001 001 001 001 001 001
  001 001 001 001 001 001 001 001 001 001 001 001 001 001 001 001
  001 001 001 001 001 001 001 001 001 001 001 001 001 001 001 001
  001 001 001 001 001 001 001 001 001 001 001 001 001 001 001 001
]
