inertia-core/src/solvers/snapshots/inertia_core__solvers__min_assists_board__test__shuffle_x.snap
---
source: src/solvers/min_assists_board.rs
expression: board
---
[
  004 004 004 004 005 005 004 004 005 005 005 005 005 005 005 005
  004 004 004 004 005 005 004 004 005 005 005 005 005 005 005 005
  004 004 004 004 004 005 004 004 005 005 005 005 005 005 005 005
  005 004 004 004 005 005 004 004 005 005 005 005 005 005 005 005
  004 004 004 004 004 004 004 004 005 005 005 005 005 005 005 005
  004 004 004 004 004 004 004 004 005 005 005 005 005 005 005 005
  005 005 005 005 005 005 004 004 005 005 005 005 005 005 005 005
  005 005 005 005 005 005 004 004 005 005 005 005 005 005 005 005
  004 004 004 004 004 003 004 004 004 004 004 004 004 004 004 004
  004 004 004 004 003 003 004 004 004 004 004 004 004 004 004 004
  003 003 003 002 003 003 003 003 005 005 004 004 005 005 005 005
  003 003 002 002 003 003 003 004 005 005 004 004 005 004 005 005
  002 001 002 002 002 002 004 004 005 005 004 004 004 004 004 004
  002 001 002 002 002 003 004 004 005 005 004 004 004 004 004 004
  001 000 001 001 003 003 004 004 005 005 004 004 004 004 004 004
  002 001 002 002 003 003 004 004 005 005 004 004 005 004 004 004
]
